# agent-harness-engineering

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-25-agents-and-ci.md
quickstart/: deep_agent_quickstart.py
quickstart/deep_research_agent/: agent.py  llm.py  tools.py
tests/: test_deep_agent_quickstart.py
